// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<li
  className="divider css-1djiy5s"
  data-testid="sidemenu-item-undefined"
>
  <a
    href="#"
    onMouseDown={[Function]}
  >
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    />
  </a>
</li>
`;

exports[`Render should render icon if exists 1`] = `
<li
  className="css-1djiy5s"
  data-testid="sidemenu-item-undefined"
>
  <a
    href="#"
    onMouseDown={[Function]}
  >
    <Icon
      className="css-290ig"
      name="icon-test"
    />
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    />
  </a>
</li>
`;

exports[`Render should render nested submenu items 1`] = `
<li
  className="css-1djiy5s"
  data-testid="sidemenu-item-undefined"
>
  <a
    href="#"
    onMouseDown={[Function]}
  >
    <Icon
      className="css-290ig"
      name="icon-test"
    />
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    >
      <Icon
        name="angle-right"
      />
    </span>
  </a>
  <ul
    className="sidemenu dropdown-menu--sidemenu submenu"
  >
    <DropDownChild
      child={
        Object {
          "divider": false,
          "icon": "icon-test",
        }
      }
      key="undefined-0"
    />
  </ul>
</li>
`;
